--- a/.github/workflows/workflow_ubuntu_NodeJS-ubuntu.yml
+++ b/.github/workflows/workflow_ubuntu_NodeJS-ubuntu.yml
@@ -2,7 +2,7 @@
 
 name: Liquibase_NodeJS_GitHub-Hosted
 
-on: [push,workflow_dispatch]
+on: [workflow_dispatch]
 
 # For more control over when the action will run, comment out (or delete) the above and trigger the workflow on master-branch push or pull request
 # by uncommenting the appropriate section below.
